--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Airbnb Clone</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <script src="https://kit.fontawesome.com/43f1c4700e.js" crossorigin="anonymous"></script>
   </head>
   <body>
